prior to outbedding client

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Pangolin MQTT Client
-version=3.0.2
+name=H4 Async MQTT Client
+version=0.0.1
 author=Phil Bowles
 maintainer=Phil Bowles
 sentence=Asynchronous MQTT client QoS01/1/2 for ESP8266, ESP32
 paragraph=Full* MQTT v3.1.1 Qos0/1/2 compliance, session management and recovery. Payload size limited only by available heap (~20kB on ESP8266)
 category=Communication
-url=https://github.com/philbowles/PangolinMQTT
+url=https://github.com/philbowles/h4asyncmqtt
 architectures=esp8266,esp32
