Fixes several memory leaks. SUBACKs, CONNACKs, and QoS 0 packets.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=H4AsyncMQTT
-version=0.0.1
+version=0.0.2
 author=Phil Bowles
-maintainer=Phil Bowles
+maintainer=Hamza Hajeir
 sentence=Asynchronous MQTT client QoS01/1/2 for ESP8266, ESP32
 paragraph=Full* MQTT v3.1.1 Qos0/1/2 compliance, session management and recovery. Payload size limited only by available heap (~20kB on ESP8266)
 category=Communication
-url=https://github.com/philbowles/h4asyncmqtt
+url=https://github.com/hamzahajeir/h4asyncmqtt
 architectures=esp8266,esp32
