--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=H4AsyncMQTT
-version=0.0.6
+version=1.0.0-rc
 author=Phil Bowles
 maintainer=Hamza Hajeir
 sentence=Asynchronous MQTT client QoS01/1/2 for ESP8266, ESP32
-paragraph=Full* MQTT v3.1.1 Qos0/1/2 compliance, session management and recovery. Payload size limited only by available heap (~20kB on ESP8266)
+paragraph=Full* MQTT v3.1.1 AND v5.0 Qos0/1/2 compliance, session management and recovery. Payload size limited only by available heap (~20kB on ESP8266)
 category=Communication
 url=https://github.com/hamzahajeir/h4asyncmqtt
 architectures=esp8266,esp32
