--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=H4AsyncMQTT
-version=1.0.0-rc
+version=1.0.0-rc1
 author=Phil Bowles
 maintainer=Hamza Hajeir
 sentence=Asynchronous MQTT client QoS01/1/2 for ESP8266, ESP32
